# ato_mpc_control

./: .gitignore  CMakeLists.txt  README.md
docs/: mpc_design.md
examples/: stop_case.csv
include/ato_sim/: auto_adjust.hpp  constraint_provider.hpp  control_loop.hpp  evaluator.hpp  linalg.hpp  mpc_controller.hpp  output_transform.hpp  parking_brake.hpp  sqpmethod.hpp  target_speed.hpp  types.hpp  vehicle_plant.hpp
scenarios/: README.md  full_line_simulation.csv  normal_cruise.csv  precise_stop_downhill.csv  precise_stop_normal.csv  precise_stop_uphill.csv  rain_low_adhesion.csv  realistic_line_1500m_restricted.csv  realistic_station_1km.csv  realistic_station_2km_uphill.csv  speed_restriction_approach.csv
src/: auto_adjust.cpp  constraint_provider.cpp  control_loop.cpp  evaluator.cpp  linalg.cpp  mpc_controller.cpp  output_transform.cpp  parking_brake.cpp  sqpmethod.cpp  target_speed.cpp  vehicle_plant.cpp
tests/: test_mpc_units.cpp
tools/: ato_sim_cli.cpp  gen_analysis_html.py
